@@ -1039,14 +1039,10 @@ attribute_hidden SEXP do_unlist(SEXP call, SEXP op, SEXP args, SEXP env)
 /* This is a special .Internal */
 attribute_hidden SEXP do_bind(SEXP call, SEXP op, SEXP args, SEXP env)
 {
-    SEXP a, t, obj, method, rho, ans;
-    int mode, deparse_level;
-    Rboolean anyS4 = FALSE;
-    struct BindData data;
-    char buf[512];
-
+    // missing(deparse.level) :
+    Rboolean missingDL = (isSymbol(CAR(args)) && R_missing(CAR(args), env));
     /* since R 2.2.0: first argument "deparse.level" */
-    deparse_level = asInteger(eval(CAR(args), env));
+    int deparse_level = asInteger(eval(CAR(args), env));
     Rboolean tryS4 = deparse_level >= 0;
     /* NB: negative deparse_level should otherwise be equivalent to deparse_level == 0,
      * --  as cbind(), rbind() below only check for '== 1' and '== 2'
@@ -1084,9 +1080,12 @@ attribute_hidden SEXP do_bind(SEXP call, SEXP op, SEXP args, SEXP env)
     PROTECT(args = promiseArgs(args, env));
 
     const char *generic = ((PRIMVAL(op) == 1) ? "cbind" : "rbind");
-    method = R_NilValue;
+    SEXP method = R_NilValue, a;
+    Rboolean anyS4 = FALSE;
+    char buf[512];
+
     for (a = CDR(args); a != R_NilValue && method == R_NilValue; a = CDR(a)) {
-	PROTECT(obj = eval(CAR(a), env));
+	SEXP obj = PROTECT(eval(CAR(a), env));
 	if (tryS4 && !anyS4 && isS4(obj)) anyS4 = TRUE;
 	if (isObject(obj)) {
 	    SEXP classlist = PROTECT(R_data_class2(obj));
@@ -1109,27 +1108,30 @@ attribute_hidden SEXP do_bind(SEXP call, SEXP op, SEXP args, SEXP env)
 
     tryS4 = anyS4 && (method == R_NilValue);
     if (tryS4) {
-	// keep 'deparse.level' as first arg and *name* it:
-	SET_TAG(args, install("deparse.level"));
-	// and use methods:::cbind / rbind
+	/* use methods:::cbind / rbind */
 	method = findFun(install(generic), R_MethodsNamespace);
-    } else
-	args = CDR(args); // keeping deparse.level for S4 dispatch
+    }
     if (method != R_NilValue) { // found an S3 or S4 method
+	if (missingDL)
+	    args = CDR(args); /* discard 'deparse.level' */
+	else
+	    SET_TAG(args, install("deparse.level")); /* tag 'deparse.level' */
 	PROTECT(method);
-	ans = applyClosure(call, method, args, env, R_NilValue, TRUE);
+	SEXP ans = applyClosure(call, method, args, env, R_NilValue, TRUE);
 	UNPROTECT(2);
 	return ans;
-    }
+    } else
+	args = CDR(args); /* discard 'deparse.level' */
 
     /* Dispatch based on class membership has failed. */
     /* The default code for rbind/cbind.default follows */
     /* First, extract the evaluated arguments. */
-    rho = env;
+    SEXP rho = env;
+    struct BindData data;
     data.ans_flags = 0;
     data.ans_length = 0;
     data.ans_nnames = 0;
-    for (t = args; t != R_NilValue; t = CDR(t))
+    for (SEXP t = args; t != R_NilValue; t = CDR(t))
 	AnswerType(PRVALUE(CAR(t)), 0, 0, &data, call);
 
     /* zero-extent matrices shouldn't give NULL, but cbind(NULL) should: */
@@ -1138,7 +1140,7 @@ attribute_hidden SEXP do_bind(SEXP call, SEXP op, SEXP args, SEXP env)
 	return R_NilValue;
     }
 
-    mode = NILSXP;
+    int mode = NILSXP;
     if      (data.ans_flags & 512) mode = EXPRSXP;
     else if (data.ans_flags & 256) mode = VECSXP;
     else if (data.ans_flags & 128) mode = STRSXP;
